--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ authors = ["Karsten <karsten.griffo@gmail.com>"]
 python = "^3.10"
 requests = "^2.31.0"
 click = "^8.1.7"
+isort = "^5.13.2"
+flake8 = "^7.0.0"
+black = "^24.3.0"
 
 [tool.poetry.dev-dependencies]
 
